compose: Fix keyboard indicator vertical alignment in send shortcut.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -632,7 +632,6 @@ input.recipient_box {
     }
 
     & kbd {
-        height: 16px;
         padding: 0 4px;
     }
 
